--- a/hw3.ipynb
+++ b/hw3.ipynb
@@ -240,10 +240,14 @@
    },
    "outputs": [],
    "source": [
-    "train_df = None\n",
-    "test_df = None\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "..."
+    "train_df, test_df = train_test_split(\n",
+    "    census_df, \n",
+    "    test_size=0.60, \n",
+    "    train_size=0.40, \n",
+    "    random_state=123\n",
+    ")"
    ]
   },
   {
@@ -367,9 +371,7 @@
    },
    "outputs": [],
    "source": [
-    "census_summary = None\n",
-    "\n",
-    "..."
+    "census_summary = train_df.describe(include='all')"
    ]
   },
   {
@@ -382,9 +384,7 @@
    },
    "outputs": [],
    "source": [
-    "max_hours_per_week = None\n",
-    "\n",
-    "..."
+    "max_hours_per_week = census_summary.loc[\"max\", \"hours-per-week\"]"
    ]
   },
   {
@@ -397,9 +397,7 @@
    },
    "outputs": [],
    "source": [
-    "most_freq_occupation = None\n",
-    "\n",
-    "..."
+    "most_freq_occupation = census_summary.loc[\"top\", \"occupation\"]"
    ]
   },
   {
@@ -412,7 +410,7 @@
    },
    "outputs": [],
    "source": [
-    "..."
+    "missing_vals_cols = train_df.columns[train_df.isnull().any()].tolist()"
    ]
   },
   {
@@ -428,10 +426,7 @@
    },
    "outputs": [],
    "source": [
-    "missing_vals_cols = []\n",
-    "numeric_cols = []\n",
-    "\n",
-    "..."
+    "numeric_cols = train_df.select_dtypes(include=['number']).columns.tolist()"
    ]
   },
   {
@@ -601,6 +596,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -635,9 +637,7 @@
      "otter_answer_cell"
     ]
    },
-   "source": [
-    "_Type your answer here, replacing this text._"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -693,11 +693,34 @@
    "outputs": [],
    "source": [
     "# Fill in the lists below.\n",
-    "numeric_features = []\n",
-    "categorical_features = []\n",
-    "ordinal_features = []\n",
-    "binary_features = []\n",
-    "drop_features = []\n",
+    "numeric_features = [\n",
+    "    \"age\", \n",
+    "    \"capital.gain\", \n",
+    "    \"capital.loss\", \n",
+    "    \"hours.per.week\"\n",
+    "]\n",
+    "\n",
+    "categorical_features = [\n",
+    "    \"workclass\", \n",
+    "    \"marital.status\", \n",
+    "    \"occupation\", \n",
+    "    \"relationship\", \n",
+    "    \"native.country\"\n",
+    "]\n",
+    "\n",
+    "ordinal_features = [\n",
+    "    \"education\"\n",
+    "]\n",
+    "\n",
+    "binary_features = [\n",
+    "    \"sex\"\n",
+    "]\n",
+    "\n",
+    "drop_features = [\n",
+    "    \"fnlwgt\", \n",
+    "    \"education.num\", \n",
+    "    \"race\"\n",
+    "]\n",
     "target = \"income\"\n",
     "\n",
     "..."
