--- a/hw3.ipynb
+++ b/hw3.ipynb
@@ -2,12 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'otter'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Initialize Otter\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01motter\u001b[39;00m\n\u001b[32m      3\u001b[39m grader = otter.Notebook(\u001b[33m\"\u001b[39m\u001b[33mhw3.ipynb\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'otter'"
+     ]
+    }
+   ],
    "source": [
     "# Initialize Otter\n",
     "import otter\n",
@@ -637,7 +649,21 @@
      "otter_answer_cell"
     ]
    },
-   "source": []
+   "source": [
+    "workclass: Categorical feature that contains missing values to be imputed before one-hot encoding.\n",
+    "fnlwgt: A demographic estimate and has no direct relationship.\n",
+    "education: Ordinal feature that models the educational level.\n",
+    "education.num: A number representation of the education, unnecessary.\n",
+    "marital.status: Categorical feature that just needs standard one-hot encoding.\n",
+    "occupation: Categorical feature that contains missing values to be imputed before one-hot encoding.\n",
+    "relationship: Categorical feature of individual role and can do one-hot encoding.\n",
+    "race: Can be biased, not necessary to include.\n",
+    "sex: Binary categorical feature that can directly use True/False or 0/1.\n",
+    "capital.gain: A numerical feature that can have high varience, so it needs to be scaled.\n",
+    "capital.loss: Same as the capital gain and requires scaling as well.\n",
+    "hours.per.week: Another numerical feature, but should still be scaled due to high varience.\n",
+    "native.country: Categorical feature that contains missing values to be imputed before one-hot encoding."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -811,10 +837,10 @@
    },
    "outputs": [],
    "source": [
-    "X_train = None\n",
-    "y_train = None\n",
-    "X_test = None\n",
-    "y_test = None\n",
+    "X_train = train_df.drop(columns=[target])\n",
+    "y_train = train_df[target]\n",
+    "X_test = test_df.drop(columns=[target])\n",
+    "y_test = test_df[target]\n",
     "\n",
     "..."
    ]
@@ -879,9 +905,17 @@
    },
    "outputs": [],
    "source": [
-    "dummy_df = None \n",
+    "import pandas as pd\n",
+    "from sklearn.dummy import DummyClassifier\n",
+    "from sklearn.model_selection import cross_validate\n",
     "\n",
-    "..."
+    "dummy_clf = DummyClassifier(strategy=\"most_frequent\")\n",
+    "\n",
+    "scores = cross_validate(\n",
+    "    dummy_clf, X_train, y_train, cv=5, return_train_score=True\n",
+    ")\n",
+    "\n",
+    "dummy_df = pd.DataFrame(scores)"
    ]
   },
   {
@@ -1036,35 +1070,20 @@
    },
    "outputs": [],
    "source": [
-    "ordinal_transformer = None\n",
+    "from sklearn.preprocessing import OrdinalEncoder\n",
     "\n",
-    "..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "otter_answer_cell"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "otter_answer_cell"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "..."
+    "education_levels = [\n",
+    "    \"Preschool\", \"1st-4th\", \"5th-6th\", \"7th-8th\", \"9th\", \"10th\", \"11th\", \"12th\", \n",
+    "    \"HS-grad\", \"Prof-school\", \"Assoc-voc\", \"Assoc-acdm\", \"Some-college\", \n",
+    "    \"Bachelors\", \"Masters\", \"Doctorate\"\n",
+    "]\n",
+    "\n",
+    "ordinal_transformer = OrdinalEncoder(\n",
+    "    categories=[education_levels], \n",
+    "    dtype=int, \n",
+    "    handle_unknown=\"use_encoded_value\", \n",
+    "    unknown_value=-1\n",
+    ")"
    ]
   },
   {
@@ -1129,8 +1148,9 @@
    },
    "outputs": [],
    "source": [
-    "binary_transformer = None\n",
-    "..."
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "\n",
+    "binary_transformer = OneHotEncoder(drop=\"if_binary\", dtype=int, sparse_output=False)"
    ]
   },
   {
@@ -1199,9 +1219,14 @@
    },
    "outputs": [],
    "source": [
-    "categorical_transformer = None\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
-    "..."
+    "categorical_transformer = make_pipeline(\n",
+    "    SimpleImputer(strategy=\"constant\", fill_value=\"missing\"),\n",
+    "    OneHotEncoder(handle_unknown=\"ignore\", sparse_output=False)\n",
+    ")"
    ]
   },
   {
@@ -1270,9 +1295,18 @@
    },
    "outputs": [],
    "source": [
-    "preprocessor = None\n",
+    "from sklearn.compose import make_column_transformer\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "..."
+    "numeric_transformer = StandardScaler()\n",
+    "\n",
+    "preprocessor = make_column_transformer(\n",
+    "    (numeric_transformer, numeric_features),\n",
+    "    (ordinal_transformer, ordinal_features),\n",
+    "    (binary_transformer, binary_features),\n",
+    "    (categorical_transformer, categorical_features),\n",
+    "    (\"drop\", drop_features)\n",
+    ")"
    ]
   },
   {
@@ -1285,10 +1319,10 @@
    },
    "outputs": [],
    "source": [
-    "transformed_df = None\n",
-    "n_new_cols = None\n",
+    "transformed_data = preprocessor.fit_transform(X_train)\n",
+    "transformed_df = pd.DataFrame(transformed_data)\n",
     "\n",
-    "..."
+    "n_new_cols = transformed_df.shape[1] - X_train.shape[1]"
    ]
   },
   {
@@ -1550,8 +1584,22 @@
    },
    "outputs": [],
    "source": [
-    "income_pred_results_df = None \n",
-    "..."
+    "results_dict = {}\n",
+    "\n",
+    "dummy_pipe = make_pipeline(preprocessor, DummyClassifier(random_state=123))\n",
+    "results_dict[\"dummy\"] = mean_std_cross_val_scores(\n",
+    "    dummy_pipe, X_train, y_train, cv=5, return_train_score=True\n",
+    ")\n",
+    "\n",
+    "for name, model in models.items():\n",
+    "    pipe = make_pipeline(preprocessor, model)\n",
+    "    \n",
+    "    results_dict[name] = mean_std_cross_val_scores(\n",
+    "        pipe, X_train, y_train, cv=5, return_train_score=True\n",
+    "    )\n",
+    "\n",
+    "income_pred_results_df = pd.DataFrame(results_dict).T\n",
+    "income_pred_results_df"
    ]
   },
   {
@@ -1718,54 +1766,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "editable": true,
-    "metadata": {
-     "tags": [
-      "otter_ignore"
-     ]
-    },
-    "slideshow": {
-     "slide_type": ""
-    },
     "tags": [
      "otter_answer_cell"
     ]
    },
    "outputs": [],
    "source": [
-    "..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": [
-     "otter_answer_cell"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "otter_answer_cell"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "best_C = None\n",
+    "import numpy as np\n",
     "\n",
-    "..."
+    "param_grid = {\"C\": np.logspace(-1, 2, 4)}\n",
+    "\n",
+    "for C_val in param_grid[\"C\"]:\n",
+    "    pipe_svc = make_pipeline(preprocessor, SVC(C=C_val, random_state=123))\n",
+    "    \n",
+    "    results_dict[f\"SVC (C={C_val})\"] = mean_std_cross_val_scores(\n",
+    "        pipe_svc, X_train, y_train, cv=5, return_train_score=True\n",
+    "    )\n",
+    "\n",
+    "pd.DataFrame(results_dict).T"
    ]
   },
   {
@@ -1850,10 +1868,16 @@
    },
    "outputs": [],
    "source": [
-    "final_pipeline = None\n",
-    "test_score = None\n",
+    "final_pipeline = make_pipeline(\n",
+    "    preprocessor, \n",
+    "    SVC(C=best_C, random_state=123)\n",
+    ")\n",
     "\n",
-    "..."
+    "final_pipeline.fit(X_train, y_train)\n",
+    "\n",
+    "test_score = final_pipeline.score(X_test, y_test)\n",
+    "\n",
+    "print(f\"Final Test Score: {test_score:.4f}\")"
    ]
   },
   {
@@ -1980,9 +2004,9 @@
  "metadata": {
   "celltoolbar": "Create Assignment",
   "kernelspec": {
-   "display_name": "Python [conda env:cpsc330]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "cpsc330"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1994,7 +2018,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.13.12"
   },
   "otter": {
    "OK_FORMAT": true,
@@ -2237,11 +2261,6 @@
       }
      ]
     }
-   }
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "59ed430e69f497e5c6bdf6cb8dd692fd34850307131b5327e821a0fe7de503c4"
    }
   }
  },
