--- a/hw3.ipynb
+++ b/hw3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -23,7 +23,8 @@
    "source": [
     "# Initialize Otter\n",
     "import otter\n",
-    "grader = otter.Notebook(\"hw3.ipynb\")"
+    "grader = otter.Notebook(\"hw3.ipynb\")\n",
+    "# Not sure what caused error here"
    ]
   },
   {
@@ -524,28 +525,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true,
-    "metadata": {
-     "tags": [
-      "otter_ignore"
-     ]
-    },
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": [
-     "otter_answer_cell"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "..."
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -977,7 +956,7 @@
     ]
    },
    "source": [
-    "_Type your answer here, replacing this text._"
+    "It would not work: 1. There are many categorical features, while SVC requires numerical features. 2. There are several missing values. 3. StandardScaler is applied several times, which will highly decrease the SVC performance."
    ]
   },
   {
@@ -1391,7 +1370,10 @@
     ]
    },
    "source": [
-    "_Type your answer here, replacing this text._"
+    "1. The StandardScaler will calculate the main and varience of the test set, so information from future will make the estimates unrealistic.\n",
+    "2. Following the Golden Rule ensures the data to be remained for final evaluation, so violating it will give a worse classifier in real-world since it appears better on paper.\n",
+    "3. Prevent data leakage and simplify code.\n",
+    "4. The ColumnTransformer is appropriate when there are various feature types including categorical, numerical, ordinal, etc. because it allows specific transformations."
    ]
   },
   {
@@ -1678,7 +1660,9 @@
     ]
    },
    "source": [
-    "_Type your answer here, replacing this text._"
+    "1. The RBF SVM.\n",
+    "2. The decision tree (shortest) & kNN (quickest).\n",
+    "3. The decision tree (highest) & RBF SVM (least)."
    ]
   },
   {
@@ -1953,7 +1937,11 @@
     ]
    },
    "source": [
-    "_Type your answer here, replacing this text._"
+    "1. Point 3([2,2]), distance = 2.83, y=1. Predicts 1.\n",
+    "2. Point 3, distance = 2.83, y=1.\n",
+    "Point 2, distance = 4.47, y=0.\n",
+    "Point 1, distance = 5.39, y=0. Predicts 0.\n",
+    "3. Predicts (1+0+0)/3 = 0.33"
    ]
   },
   {
